try to fix build error on windows platform
java.lang.NoClassDefFoundError at PlatformHookWindows.java:628
        Caused by: java.lang.ExceptionInInitializerError at
	AccessibleObject.java:354